--- a/src/app/Components/buy-now/buy-now.component.html
+++ b/src/app/Components/buy-now/buy-now.component.html
@@ -1,5 +1,5 @@
 
-<h2>Responsive Checkout Form</h2>
+<h2 style="text-align: center;">Responsive Checkout Form</h2>
 <div class="row">
   <div class="col-75">
     <div class="container">
@@ -77,14 +77,15 @@
     </div>
   </div>
   <div class="col-25">
-    <!-- <div class="container">
-      <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-      <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-      <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-      <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-      <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+    <div class="container">
+      <h4>Cart <span class="price" style="color:black"></span></h4>
+      <ng-container *ngFor="let cartpric of allcart">
+
+      <p><a href="#">Product </a> <span class="price">₹ {{cartpric.price}}</span></p>
+      
+    </ng-container>
       <hr>
-      <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
-    </div> -->
+      <p>Total <span class="price" style="color:black"><b>{{grandTotal}}</b></span></p>
+    </div>
   </div>
 </div>
