--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,8 @@
                   <a class="nav-link" routerLink="/contact">Contact Us</a>
                </li>
                <a class="nav-link" routerLink="/Cart"><i class="fa fa-cart-plus fs-5" style="color: white;"></i>
-                  <span class="position-absolute translate-middle badge rounded rounded-pill bg-danger">{{totalItem}}
+                  <span class="position-absolute translate-middle badge rounded rounded-pill bg-danger">
+                     {{totalItem}}
                      <span class="visually-hidden"></span>
                   </span>
                </a>
